Nesse commit a documentação Swagger está completa com protecção de rotas e autenticação com token de um user criado na BD
